--- a/index.html
+++ b/index.html
@@ -102,9 +102,12 @@
         <div class="container">
             <div class="event__duo">
                 <div class="playicon">
-                       <img src="img/playicon.svg">
-                </div>
-                    <img class="concert4" src="img/concert4.svg">
+                    <video width="320" height="260" controls>
+                        <source src="img/VID-20200104-WA0005.mp4" type="video/mp4">
+                        <!-- <source src="movie.ogg" type="video/ogg"> -->
+                      Your browser does not support the video tag.
+                      </video>
+                    </div>
                 <div class="event__text">
                     <div class="event__title"> <span class="underline">Eve</span>nt Booking</div>
                     <p class="event__paragraph">
@@ -148,11 +151,11 @@
                 <div class="concerts__text">Got an event you would like me to perform at? Or you want me to perform at your event? Or you even want an autograph? Fill the contact form and we can do these and more. You will get a response as soon as we get your message</div>
                 <form>
                     <div class="form1">
-                        <div>Name<input type="name" class="name"></div>  
-                         <div>Email Address<input type="email" class="email"></div> 
+                        <div><label>Name</label><input type="name" class="name"></div>  
+                         <div><label>Email Address</label><input type="email" class="email"></div> 
                       </div>
                       <div class="form2">
-                          <div>Message<input type="message" class="message"></div>  
+                          <div><label>Message</label><input type="message" class="message"></div>  
                       </div>
                       <button type="send" class="btn">Send Message</button>
                  
